<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="be.timdesmet.hogent_mobielplus_project.ui.viewmodels.auth.PasswordViewModel"/>
    </data>

    <LinearLayout
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/auth_password_title"
                android:textColor="@color/contentTextColor"
                android:textSize="24sp"/>

            <androidx.cardview.widget.CardView
                app:cardElevation="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"

                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="40dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:padding="30dp"
                        android:layout_height="wrap_content">


                        <TextView
                            android:textColor="@color/inputLabelColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/auth_password_subtitle"
                            android:textSize="14sp"
                            android:gravity="center_horizontal" />

                        <TextView
                            android:textColor="@color/inputLabelColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/input_email_label"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/inputEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="14"
                            android:background="@color/inputBackgroundColor"
                            android:textColorHint="@color/inputHintColor"
                            android:textColorLink="@color/inputLinkColor"
                            android:textColor="@color/inputText"
                            android:hint="@string/input_email_hint"
                            android:text="@={viewModel.email}"
                            android:textSize="18sp"
                            android:layout_marginTop="5dp"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="10dp"/>

                        <Button
                            android:onClick="@{() -> viewModel.reset()}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/button_dark"
                            android:textColor="@color/buttonTextColor"
                            android:padding="10dp"
                            android:text="@string/auth_password_submit"
                            android:inputType="textCapWords"
                            android:textSize="18sp"
                            />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_gravity="center_horizontal">

                        <TextView
                            android:layout_marginRight="7dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textLightColor"
                            android:text="@string/auth_password_login_1"
                            android:layout_marginEnd="7dp" />

                        <TextView
                            android:id="@+id/login_link"
                            android:textColor="@color/textLinkColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/auth_password_login_2" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</layout>